--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Release All Go Platforms
+name: Build and Release Desktop Go Platforms
 
 on:
   push:
@@ -17,27 +17,23 @@ jobs:
         with:
           go-version: '1.23'  # 根据需要调整 Go 版本
 
-      - name: Build binaries for all Go supported platforms
+      - name: Build binaries for desktop platforms only (Linux, macOS, Windows)
         env:
           TAG: ${{ github.ref_name }}  # 当前 tag 版本，例如 v1.0.0
         run: |
           mkdir -p dist
           # 获取所有 Go 支持的平台列表，每一行形如 "linux/amd64"
-          go tool dist list > platforms.txt
-          while read platform; do
+          go tool dist list | grep -E "^(linux|darwin|windows)/" | while read platform; do
             GOOS=${platform%%/*}
             GOARCH=${platform#*/}
             binary="myapp_${TAG}_${GOOS}_${GOARCH}"
             # 如果是 Windows 平台，追加 .exe 后缀
             if [ "$GOOS" = "windows" ]; then
               binary="${binary}.exe"
-            # 如果是 js/wasm 平台，生成 .wasm 文件
-            elif [ "$GOOS" = "js" ] && [ "$GOARCH" = "wasm" ]; then
-              binary="${binary}.wasm"
             fi
             echo "Building for $GOOS/$GOARCH: $binary"
             GOOS=$GOOS GOARCH=$GOARCH go build -o "dist/$binary" .
-          done < platforms.txt
+          done
 
       - name: Create GitHub Release
         id: create_release
