--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
           TAG: ${{ github.ref_name }}  # 当前 tag 版本，例如 v1.0.0
         run: |
           mkdir -p dist
-          # 获取所有 Go 支持的平台列表，每一行形如 "linux/amd64"
-          go tool dist list | grep -E "^(linux|darwin|windows)/" | while read platform; do
+          # 获取所有 Go 支持的平台列表，过滤出常见平台和架构
+          go tool dist list | grep -E "^(linux|darwin|windows)/(amd64|arm64)$" | while read platform; do
             GOOS=${platform%%/*}
             GOARCH=${platform#*/}
             binary="ecapp_${TAG}_${GOOS}_${GOARCH}"
